--- a/app.json
+++ b/app.json
@@ -12,12 +12,23 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.haramad",
+      "config":{
+        "googleMapsApiKey":"AIzaSyDdUQ1EIQJB46n2RSusQro1qP3Pd4mGZcA"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "package":"com.haramadd",
+      "config":{
+        "googleMaps":{
+          "apiKey": "AIzaSyDdUQ1EIQJB46n2RSusQro1qP3Pd4mGZcA"
+        },
+        "permissions":["ACCESS_COARSE_LOCATION","ACCESS_FINE_LOCATION","FOREGROUND_SERVICE"]
+      }
       }
     },
     "web": {
