--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-feather": "^1.1.2",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.18.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
